--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -14,3 +14,13 @@
     flex: 33.33%;
     padding: 5px;
   }
+
+  .row {
+    align-items: center;
+    display: flex;
+  }
+  
+  .column {
+    flex: 33.33%;
+    padding: 5px;
+  }
