--- a/_includes/home.html
+++ b/_includes/home.html
@@ -11,11 +11,9 @@
 <table>
     <tr>
         <td><a href="/">Home</a></td>
-        <td><a href="/housing.md">Housing</a></td>
-        <td><a href="/food.md">Food</a></td>
-        <td><a href="/sports.md">Sports</a></td>
-        <td><a href="/activities.md">Activities</a></td>
-        <td><a href="/family-night.md">Family-Night</a></td>
-        <td><a href="/gallery.md">Gallery</a></td>
+        <td><a href="/calculator">Calculator</a></td>
+        <td><a href="/calender.md">Calender</a></td>
+        <td><a href="/notebook.md">Notebook</a></td>
+        <td><a href="/resources.md">Student Resources</a></td>       
     </tr>
 </table>
